# aiinvestadvisor

./: LICENSE  README.md  final_advice_report.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
output/: final_advice_report.md
src/aiinvestadvisor/: crew.py  main.py
src/aiinvestadvisor/aiinvestadvisor/: crew.py
src/aiinvestadvisor/config/: agents.yaml  tasks.yaml
src/aiinvestadvisor/tools/: custom_tools.py
